# ZetaEngine

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  build.bat  build.sh  build_bullet.bat  build_crossguid.bat  build_opengex.bat  build_zlib.bat  config.h  config.h.in  shader-error.txt  windows.bat
.circleci/: config.yml
Asset/Shaders/: cbuffer2.h  illum.hs  simple.hlsl  vsoutput2.hs
Editor/: CMakeLists.txt  EditorConfig.cpp  EditorLogic.cpp  EditorLogic.hpp
Empty/: EmptyApplication.cpp
Framework/: CMakeLists.txt
Framework/Ability/: Animatable.hpp  Intersectable.hpp
Framework/Algorism/: Bezier.hpp  Bresenham.hpp  Curve.hpp  Gjk.hpp  Linear.hpp  MatrixComposeDecompose.hpp  Tree.hpp  TriangleRasterization.hpp  aabb.hpp  numerical.hpp  quickhull.cpp  quickhull.hpp
Framework/Common/: Allocator.cpp  Allocator.hpp  AnimationManager.cpp  AnimationManager.hpp  AssetLoader.cpp  AssetLoader.hpp  BaseApplication.cpp  BaseApplication.hpp  BaseSceneNode.hpp  BaseSceneObject.hpp  BlockAllocator.cpp  BlockAllocator.hpp  Buffer.hpp  CMakeLists.txt  ColorSpaceConversion.hpp  DebugManager.cpp  DebugManager.hpp  ForwardRenderPass.cpp  ForwardRenderPass.hpp  GameLogic.cpp  GameLogic.hpp  GfxConfiguration.hpp  GfxStructures.hpp  GraphicsManager.cpp  GraphicsManager.hpp  HuffmanTree.hpp  Image.cpp  Image.hpp  InputManager.cpp  InputManager.hpp  MemoryManager.cpp  MemoryManager.hpp  Mesh.h  PhysicsManager.cpp  PhysicsManager.hpp  Scene.cpp  Scene.hpp  SceneBoneNode.hpp  SceneCameraNode.hpp  SceneGeometryNode.hpp  (+34 more)
Framework/Common/test/: SceneObjectTest.cpp  test.cpp
Framework/DrawPass/: CMakeLists.txt  ForwardRenderPass.cpp  ForwardRenderPass.hpp  HUDPass.cpp  HUDPass.hpp  ShadowMapPass.cpp  ShadowMapPass.hpp
Framework/GeoMath/: CMakeLists.txt  geommath.hpp
Framework/GeoMath/ispc/: CMakeLists.txt
Framework/GeoMath/test/: test.cpp
Framework/GeomMath/: CMakeLists.txt  geommath.hpp
Framework/GeomMath/ispc/: CMakeLists.txt
Framework/GeomMath/test/: test.cpp
Framework/Geometries/: Box.cpp  Box.hpp  CMakeLists.txt  ConvexHull.hpp  Geometry.cpp  Geometry.hpp  Plane.cpp  Plane.hpp  Polyhedron.cpp  Polyhedron.hpp  Sphere.cpp  Sphere.hpp
Framework/Interface/: IAllocator.hpp  IApplication.hpp  IDrawPass.hpp  IGameLogic.hpp  IMemoryManager.hpp  IPhysicsManager.hpp  IRuntimeModule.hpp  IShaderManager.hpp  ImageParser.hpp  Interface.hpp  SceneParser.hpp
Framework/Parser/: BMP.hpp  JPEG.hpp  OGEX.hpp  PNG.hpp  TGA.hpp
Game/: CMakeLists.txt
Game/Billiard/: BilliardGameConfig.cpp  BilliardGameLogic.cpp  BilliardGameLogic.hpp  CMakeLists.txt
Game/article_41/: CMakeLists.txt  article_41_config.cpp  article_41_logic.cpp  article_41_logic.hpp
Game/article_43/: CMakeLists.txt  article_43_config.cpp  article_43_logic.cpp  article_43_logic.hpp
Game/article_45/: CMakeLists.txt  article_45_config.cpp  article_45_logic.cpp  article_45_logic.hpp
Physics/Bullet/: BulletPhysicsManager.cpp  BulletPhysicsManager.hpp
Physics/My/: MotionState.hpp  MyPhysicsManager.cpp  MyPhysicsManager.hpp  RigidBody.hpp
Platform/Android/: AndroidApplication.cpp  AndroidApplication.hpp  AndroidApplicationConfig.cpp  AndroidAssetLoader.cpp  AndroidAssetLoader.hpp  OpenGLESApplication.cpp  OpenGLESApplication.hpp
Platform/Darwin/: CMakeLists.txt  CocoaApplication.h  CocoaApplication.mm  CocoaApplicationConfig.cpp  CocoaOpenGLApplication.h  CocoaOpenGLApplication.mm  CocoaOpenGLApplicationConfig.cpp  GLView.mm  XcbApplication.cpp  XcbApplication.hpp  XcbOpenGLApplication.cpp  XcbOpenGLApplication.hpp
Platform/Empty/: EmptyApplication.cpp  EmptyApplication.hpp  EmptyApplicationConfig.cpp
Platform/Linux/: CMakeLists.txt  OpenGLApplication.cpp  OpenGLApplication.hpp  OpenGLApplicationConfig.cpp  XcbApplication.cpp  XcbApplication.hpp
Platform/Psp2/: CMakeLists.txt  Psp2Application.cpp
Platform/Windows/: CMakeLists.txt  D3d12Application.cpp  D3d12Application.hpp  D3d12ApplicationConfig.cpp  Mesh.h  OpenGLApplication.cpp  OpenGLApplication.hpp  OpenGLApplicationConfig.cpp  WindowsApplication.cpp  WindowsApplication.hpp  cbuffer.h  helloengine.c  helloengine_d2d.cpp  helloengine_d3d.cpp  helloengine_d3d12.cpp  helloengine_opengl.cpp  helloengine_win.c  helloengine_xcb  simple.hlsl
Platform/Windows/test/: CMakeLists.txt  TextureLoadTest.cpp
RHI/: CMakeLists.txt
RHI/D2d/: D2dGraphicsManager.cpp  D2dGraphicsManager.hpp
RHI/D3d/: CMakeLists.txt  D3d12GraphicsManager.cpp  D3d12GraphicsManager.hpp
RHI/OpenGL/: CMakeLists.txt  OpenGLConfig.hpp  OpenGLESConfig.hpp  OpenGLESGraphicsManager.cpp  OpenGLESShaderManager.hpp  OpenGLGraphicsManager.cpp  OpenGLGraphicsManager.hpp  OpenGLGraphicsManagerCommonBase.hpp  OpenGLShaderManager.hpp  OpenGLShaderManagerCommonBase.cpp  OpenGLShaderManagerCommonBase.hpp
Test/: AnimationTest.cpp  AssetLoaderTest.cpp  BezierCubic1DTest.cpp  CMakeLists.txt  ColorSpaceConversionTest.cpp  GeomMathTest.cpp  GjkTest.cpp  JpegParserTest.cpp  NumericalMethodsTest.cpp  OgexParserTest.cpp  PngParserTest.cpp  QuickhullTest.cpp  SceneLoadingTest.cpp  SceneObjectTest.cpp  TgaParserTest.cpp
